<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:theme="@style/Theme.Kanban.AppBarOverlay"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            app:titleTextColor="@color/white"
            android:id="@+id/tb_sign_up"
            app:popupTheme="@style/Theme.Kanban.PopUpOverlay"
            android:layout_height="?attr/actionBarSize">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/sign_up_tutorial"
        android:layout_marginTop="@dimen/et_margin_top"
        android:textSize="@dimen/sign_tutorial_text_size"
        android:padding="@dimen/sign_tutorial_padding"
        android:textStyle="italic"
        android:layout_height="wrap_content">
    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:elevation="@dimen/cardview_elevation"
        android:layout_margin="@dimen/cardview_margin"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/cardview_corner_radius"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/sign_linear_layout_padding"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/sign_edit_text_margin_top"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/et_sign_up_name"
                        android:hint="@string/name"
                        android:layout_height="wrap_content">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/sign_edit_text_margin_top"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/et_sign_up_email"
                        android:hint="@string/email"
                        android:layout_height="wrap_content">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/sign_edit_text_margin_top"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/et_sign_up_password"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/sign_up_repeat_password_margin_top"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:id="@+id/et_sign_up_repeat_password"
                        android:hint="@string/repeat_password"
                        android:layout_height="wrap_content">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:text="@string/sign_up"
                    android:id="@+id/cmd_sign_up_submit"
                    android:layout_marginTop="@dimen/sign_submit_margin_top"
                    android:layout_height="wrap_content">
                </com.google.android.material.button.MaterialButton>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>