<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEventActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:theme="@style/Theme.Kanban.AppBarOverlay"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            app:titleTextColor="@color/white"
            android:id="@+id/tb_add_event"
            app:popupTheme="@style/Theme.Kanban.PopUpOverlay"
            android:layout_height="?attr/actionBarSize">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/icon"
                    android:layout_marginTop="23dp"
                    android:layout_height="150dp">
                </ImageView>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/sign_edit_text_margin_top"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/et_add_event_name"
                        android:hint="@string/name"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_height="wrap_content">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/et_add_event_time"
                        android:hint="@string/time"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_height="wrap_content">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cmd_add_event_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:focusable="false"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/date">
                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cmd_add_event_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:focusable="false"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="@dimen/sign_submit_margin_top"
                    android:text="@string/submit">
                </com.google.android.material.button.MaterialButton>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>